@@ -1195,7 +1195,7 @@ page_cur_insert_rec_zip_reorg(
 	}
 
 	/* Out of space: restore the page */
-	if (!page_zip_decompress(page_zip, page)) {
+	if (!page_zip_decompress(page_zip, page, FALSE)) {
 		ut_error; /* Memory corrupted? */
 	}
 	ut_ad(page_validate(page, index));
